<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgApp"
    android:orientation="vertical"
    tools:context="shop.smartbazaar.smartbazaar.activities.SettingsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:minHeight="@dimen/abc_action_bar_default_height_material"
        >



    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@android:color/white">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/droidkufi_regular"
                android:padding="15dp"
                android:text="@string/profileTxt"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/droidkufi_regular"
                android:padding="15dp"
                android:text="@string/shippingAddressTxt"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/droidkufi_regular"
                android:padding="15dp"
                android:text="@string/currencyTxt"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true"
                android:textColor="@android:color/black"/>


        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@android:color/white"
        android:layout_marginTop="10dp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/droidkufi_regular"
                android:padding="15dp"
                android:text="@string/languageTxt"
                android:id="@+id/selectLangTv"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/droidkufi_regular"
                android:padding="15dp"
                android:text="@string/notificationTxt"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/droidkufi_regular"
                android:padding="15dp"
                android:text="@string/rateSmartbazaar"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true"
                android:textColor="@android:color/black"/>


        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>
