<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="shop.smartbazaar.smartbazaar.activities.RegisterActivity"
    android:background="@android:color/white"
    android:focusable="true"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/droidkufi_regular"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/registerPageTitle"
                android:textColor="#656363" />


            <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/spin_kit"
                style="@style/SpinKitView.Circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible"
                app:SpinKit_Color="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <EditText
                    android:id="@+id/edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:background="@drawable/border_corner5"
                    android:hint="@string/phoneNumberTxt"
                    android:inputType="number"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:gravity="start|center"


                    />

                <EditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border_corner5"
                    android:hint="@string/fullNameTxt"
                    android:inputType="text"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:gravity="start|center"

                    />

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border_corner5"
                    android:hint="@string/emailHintTxt"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:gravity="start|center"

                    />

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border_corner5"
                    android:hint="@string/passwordTxt"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:gravity="start|center"
                    android:textAlignment="viewStart"

                    />

                <EditText
                    android:id="@+id/edt_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border_corner5"
                    android:hint="@string/confirmPasswordHint"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:gravity="start|center"
                    android:textAlignment="viewStart"
                    />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start">

                    <Spinner
                        android:id="@+id/sp_city"
                        android:layout_width="0dp"
                        android:layout_height="61dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/border_corner5"


                        />


                    <Spinner
                        android:id="@+id/sp_sex"
                        android:layout_width="0dp"
                        android:layout_height="61dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/border_corner5"

                        />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/droidkufi_regular"
                        android:padding="5dp"
                        android:text="@string/termsPart1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/droidkufi_regular"
                        android:padding="5dp"
                        android:text="@string/termsPart2"
                        android:textColor="@color/design_default_color_primary" />
                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="53dp">

                    <Button
                        android:id="@+id/register"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/btn_register_shape"
                        android:fontFamily="@font/droidkufi_bold"
                        android:onClick="register_user"
                        android:text="@string/create"
                        android:textColor="@android:color/white" />





                </RelativeLayout>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
